samples/_failures_safe/1761263620_cdc67a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_604191b6.c: In function ‘main’:
./samples/SAFE/__tmp_604191b6.c:131:35: error: missing terminating " character
  131 |         int result = sscanf(line, "%
      |                                   ^~
./samples/SAFE/__tmp_604191b6.c:131:9: error: expected expression at end of input
  131 |         int result = sscanf(line, "%
      |         ^~~
./samples/SAFE/__tmp_604191b6.c:131:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_604191b6.c:131:9: error: expected declaration or statement at end of input
